Weekly planner last slider pips gain top padding to avoid overlapping tooltips

--- a/src/js/backend/jsx/WorkingHoursPlanner.less
+++ b/src/js/backend/jsx/WorkingHoursPlanner.less
@@ -89,6 +89,10 @@
           background: var(--blue-800);
         }
       }
+
+      :global(.noUi-pips-horizontal) {
+        padding: 26px 0 !important;
+      }
     }
 
     :global(.noUi-target) {
